v1.4/community-and-governance/obol-token/tge-faq.md
# TGE FAQ

## Unlock and Listing

<details>

<summary><strong>How do I unlock my OBOL Tokens received in the Airdrop?</strong></summary>

Starting May 7th at 11:00 AM UTC, visit [**claim.obol.org**](https://claim.obol.org), click **“Unlock”**, and follow the steps.

</details>

<details>

<summary><strong>When is the official TGE date and time?</strong></summary>

The OBOL Token will be listed on exchanges for deposit, trading and withdrawals on May 7th, 2025 at 11:00 AM UTC

</details>

<details>

<summary><strong>Where will the OBOL Token be listed for trading?</strong></summary>

* **Binance**, **Bybit**, **Bitget**, **Gate.io**, **MEXC**, and others.

- Check [CoinGecko](https://coingecko.com) or [CoinMarketCap](https://coinmarketcap.com/currencies/obol/) for the most up-to-date list.

</details>

<details>

<summary><strong>What are the exact listing times on exchanges?</strong></summary>

* **Binance Alpha** – _May 7 at 10:00 AM UTC_

- **Binance Futures** – _May 7 at 10:30 AM UTC_

* **Bybit, Gate.io, Bitget, MEXC** – _May 7 at 11:00 AM UTC_

</details>

<details>

<summary><strong>Where can I track the price of the OBOL Token?</strong></summary>

[CoinGecko](https://coingecko.com) and [CoinMarketCap](https://coinmarketcap.com/currencies/obol/)

</details>

<details>

<summary><strong>Where can I buy the OBOL Token onchain?</strong></summary>

* A **Uniswap v3 pool** will be seeded with initial liquidity.

- The contract address is [here](https://etherscan.io/address/0x57F52C9faa6D40c5163D76b8D7dD81ddB7c95434).

* Anyone can start a pool. Check live prices via **CoinGecko**, or **CoinMarketCap**.

</details>

<details>

<summary><strong>Are there any country restrictions for claiming or trading the OBOL Token?</strong></summary>

* Yes. Each venue has its own restrictions.

- Unlocking OBOL Tokens received through the Airdrop is subject to the same geo restrictions as claiming.

</details>

## **Token Supply & Distribution**

<details>

<summary><strong>What is the circulating supply at TGE?</strong></summary>

Approximately 1&#x39;**%**. Full breakdown is on [CoinMarketCap](https://coinmarketcap.com/currencies/obol/).

</details>

<details>

<summary><strong>Why does Etherscan show 374M tokens instead of 500M?</strong></summary>

For legal and tax reasons, not all tokens are minted yet.

</details>

<details>

<summary><strong>How many tokens were allocated to CoinList, and how many unlock at TGE?</strong></summary>

Details available on the [**Coinlist Sale Page**](https://coinlist.co/obol).

</details>

<details>

<summary><strong>When were unclaimed airdrop tokens returned to the treasury?</strong></summary>

As approved by [**OIP-2**](https://community.obol.org/t/oip-2-unlock-obol-token/317), they were [returned](https://etherscan.io/tx/0x738b4c252bb4613b9945e3b6426ec4ee510c6cdb86027fe20d533c4799a3a331) on **May 2, 2025**.

</details>

## **Unlocks & Vesting**

<details>

<summary><strong>Can CoinList participants claim at TGE?</strong></summary>

Yes, a portion of their tokens will unlock on May 7th at 11AM UTC per the [**Coinlist terms**](https://coinlist.co/obol).

</details>

<details>

<summary><strong>Will RAF1 tokens be available at TGE?</strong></summary>

RAF1 tokens will be distributed **shortly after TGE**.

</details>

<details>

<summary><strong>When will OBOL Token incentives be claimable?</strong></summary>

Starting May 12, 2025, incentives will be distributed weekly

</details>
